--- a/LD56.csproj
+++ b/LD56.csproj
@@ -54,6 +54,7 @@
     <None Include="Assets\Scripts\PlayerScript.plzmeta" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\OrbitalCameraScript.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
